target/classes/META-INF/fabric8/openshift/kafka-producer-ocp-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 9f23a04a1c3cfcb0a3a3638792137305b5ddd004
    fabric8.io/git-branch: master
    fabric8.io/git-url: https://github.com/rh-maggarwa/amq-streams.git
  labels:
    app: kafka-producer-ocp
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: org.redhat
  name: kafka-producer-ocp
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: kafka-producer-ocp
    provider: fabric8
    group: org.redhat
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 9f23a04a1c3cfcb0a3a3638792137305b5ddd004
        fabric8.io/git-branch: master
        fabric8.io/git-url: https://github.com/rh-maggarwa/amq-streams.git
      labels:
        app: kafka-producer-ocp
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: org.redhat
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: kafka-producer-ocp:latest
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: kafka-producer-ocp:latest
    type: ImageChange
