target/classes/META-INF/fabric8/openshift/kafka-producer-ocp-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 9f23a04a1c3cfcb0a3a3638792137305b5ddd004
    fabric8.io/git-branch: master
    fabric8.io/git-url: https://github.com/rh-maggarwa/amq-streams.git
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: kafka-producer-ocp
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: org.redhat
  name: kafka-producer-ocp
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kafka-producer-ocp
    provider: fabric8
    group: org.redhat
