target/classes/META-INF/fabric8/openshift/kafka-producer-ocp-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/git-commit: f7fb61983edd24fcfd323f936246ab544f693564
    fabric8.io/git-branch: main
    fabric8.io/git-url: https://github.com/sainijit/kafka-producer.git
  labels:
    expose: "true"
    app: kafka-producer-ocp
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: org.redhat
  name: kafka-producer-ocp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kafka-producer-ocp
